# Drone

./: CMakeLists.txt  README.md  build_mingw.bat  build_msvc.bat  uagd_nsga.cpp
.github/workflows/: c-cpp.yml
